[tool.poetry]
name = "leaf-eval-tools"
version = "0.1.0"
description = "A project that provides eval tools for leaf-playground based projects"
authors = [
    "The LEAF team (past and future) with the help of all our contributors <leaf@shanda.com>",
]
readme = "README.md"
packages = [
    { include = "leaf_eval_tools", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"
datasets = "^2.15.0"
ragas = "^0.1.1"
leaf_ai_backends = "^0.1.0"

[tool.black]
line-length = 119
skip-magic-trailing-comma = true
safe = true
required-version = "23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
